# neuronika

./: Neuronika.spec  README.md  main.py  main.spec  pyproject.toml  settings.py
tools/: __init__.py
